[project]
name = "sir"
description="Search Index Rabbit"
authors = [
    { name = "MetaBrainz Foundation", email = "support@metabrainz.org" },
    { name = "Wieland Hoffmann" }
]
readme = "README.rst"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13"
]
dynamic = ["version"]

[project.urls]
Issues = "https://tickets.metabrainz.org/projects/SEARCH/issues/"
Documentation = "https://sir.readthedocs.io"
Repository = "https://github.com/metabrainz/sir"

[build-system]
requires = ["setuptools>=80.3.1", "setuptools_scm>=8.3.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "sir",
    "sir.amqp",
    "sir.schema",
    "sir.trigger_generation",
    "sir.wscompat"
]

[tool.setuptools_scm]
